# lm-benchmarks

./: .gitignore  CLAUDE.md  README.md  config.example.env  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  USAGE.md
docs/plans/: 2026-05-03-architecture-review.md  2026-05-03-lm-benchmarks-implementation.md
examples/Qwen__Qwen3-Omni/: benchmark.sh  smoke.sh
examples/Qwen__Qwen3-Omni-Thinker/: benchmark.sh  smoke.sh
examples/Qwen__Qwen3.6-27B-FP8/: benchmark.sh  smoke.sh
examples/Qwen__Qwen3.6-35B-A3B-FP8/: benchmark.sh  smoke.sh
lm_benchmarks/: __init__.py  cli.py  config.py  metrics.py  plot.py  runner.py  serve.py  test_config.py  test_metrics.py  test_plot.py  test_runner.py  test_serve.py  utils.py
tests/: test_config.py  test_integration.py  test_plot.py  test_runner.py  test_serve.py  test_utils.py
